<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Feed the Dog</string>
    <string name="title_activity_main">Game</string>
    <string name="new_game">New Game</string>
    <string name="nothing"></string>
    <string name="placeholder">This should be changed programmatically</string>
    <string name="your_score">Your score: </string>
    <string name="high_score">High score: </string>
    <string name="new_line">\n</string>
    <string name="option_text1">Duration</string>
    <string name="option_text2">Difficulty</string>
    <string name="save">Save</string>
    <string name="play_again">Play again</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_help">Help</string>
    <string name="help_description"> The goal of the game is simple - you need to feed the dogs! But you have to be quick.
        The dogs will appear on random places on the screen and will shortly after disappear. Click on them before they are gone to give them a bone. \n\n
        You can change the game duration or difficulty from the Settings menu.</string>
    <string name="title_activity_about">About</string>
    <string name="about_description"> This app was developed as a university project for the course \"Mobile Applications\" at Sofia University 2017/2018
        by Yuliyan Serbezki, faculty number 81104. \n\nIt falls under the GNU license. All copyrighted resources are reserved to their respectful owners.</string>
    <string name="menu_game_title">Feed the Dog!</string>
    <string-array name="durationArray">
        <item>Very short</item>
        <item>Short</item>
        <item>Normal</item>
        <item>Long</item>
        <item>Very long</item>
    </string-array>
    <string-array name="difficultyArray">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>

</resources>
