<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/menu_game_title"
        android:textColor="#949494"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_game_button"
        android:layout_centerHorizontal="true" 
        android:layout_marginTop="20dp"
        android:text="@string/action_settings" />
    
    <Button
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_button"
        android:layout_centerHorizontal="true" 
        android:layout_marginTop="20dp"
        android:text="@string/title_activity_help" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_button"
        android:layout_centerHorizontal="true" 
        android:layout_marginTop="20dp"
        android:text="@string/title_activity_about" />

</RelativeLayout>