<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/action_settings"
        android:textColor="#949494"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginStart="55dp"
        android:layout_marginTop="85dp"
        android:text="@string/option_text1"
        android:textColor="#949494"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_toEndOf="@id/textView4"
        android:layout_marginStart="25dp"
        android:layout_marginTop="70dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginStart="55dp"
        android:layout_marginTop="85dp"
        android:text="@string/option_text2"
        android:textColor="#949494"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_toEndOf="@id/textView5"
        android:layout_marginStart="25dp"
        android:layout_marginTop="70dp"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/save"
        android:textSize="24sp"/>

</RelativeLayout>